--- a/index.html
+++ b/index.html
@@ -3,13 +3,29 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./styles.css">
+        <title>Encriptador</title>
     </head>
     <body>
-       <header>
-
-       </header>
+        <header>
+            <img class="logo" src="./imagenes/Logo.png" alt="logo alura">
+        </header>
        <main>
-
+            <section>
+                <textarea></textarea>
+                <div>
+                    <h6></h6>
+                </div>
+                <div>
+                    <button></button>
+                    <button></button>
+                </div>
+            </section>
+            <section>
+                <textarea></textarea>
+                <div>
+                    <button></button>
+                </div>
+            </section>
        </main>
        <script src="./script.js"></script> 
     </body>
