--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
         </header>
        <main>
             <section>
-                <textarea></textarea>
+                <textarea class="text-area" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
                 <div>
-                    <h6></h6>
+                    <h6 class="Informacion">Solo letras minusculas y sin acentos</h6>
                 </div>
-                <div>
-                    <button></button>
-                    <button></button>
+                <div class="botones">
+                    <button class="btn-encriptar" onclick="btnEncriptar()">Encriptar</button>
+                    <button class="btn-desencriptar" onclick="btnDesencriptar()">Desencriptar</button>
                 </div>
             </section>
             <section>
-                <textarea></textarea>
+                <textarea class="mensaje" cols="20" rows="10"></textarea>
                 <div>
-                    <button></button>
+                    <button class="copiar">Copiar()</button>
                 </div>
             </section>
        </main>
