--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE-EDGE">
+        <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-            <img class="logo" src="./imagenes/Logo.png" alt="logo alura">
+            <img class="logo" src="/imagenes/Logo.png" alt="Logo Alura">
         </header>
        <main>
             <section>
