--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="/imagenes/Frame 6.png" alt="logo de alura" >
+        <img class="logo" src="/imagenes/Logo.png" alt="Logo de Alura" >
     </header>
     <main>
         <section>
@@ -34,4 +34,5 @@
     </main>
 <script src="/script.js"></script>
 </body>
+<footer id="pie">Derechos Reservados &copy; 2023 - Creado y Diseñado por Lic. Beatriz Adriana Pozos V.</footer>
 </html>
