--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             </div>
         </section>
     </main>
+    <footer class="pie">Derechos Reservados &copy; 2023 - Creado y Diseñado por Lic. Beatriz Adriana Pozos V.</footer>
 <script src="/script.js"></script>
 </body>
-<footer id="pie">Derechos Reservados &copy; 2023 - Creado y Diseñado por Lic. Beatriz Adriana Pozos V.</footer>
+
 </html>
