--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="/imagenes/Logo.png" alt="Logo de Alura" >
+        <img class="logo" src="./imagenes/Logo.png" alt="Logo de Alura" >
     </header>
     <main>
         <section>
@@ -33,7 +33,7 @@
         </section>
     </main>
     <footer class="pie">Derechos Reservados &copy; 2023 - Creado y Diseñado por Lic. Beatriz Adriana Pozos V.</footer>
-<script src="/script.js"></script>
+<script src="./script.js"></script>
 </body>
 
 </html>
